--- a/style.css
+++ b/style.css
@@ -54,7 +54,7 @@ body {
 
 .tabcontent {
   color: azure;
-  display: flex;
+  display: none;
   flex-direction: column;
   padding: 6px 50px;
   animation: animation 0.5s ease-out;
